--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://thefinalcutproductions.com/",
+  "homepage": "http://videoddity.com/",
   "name": "datafinaltest",
   "version": "0.1.0",
   "private": true,
